Fixed issue with card cutting off card-content. It now resizes with longer content.

--- a/src/components/kanbancolumn/kanbancolumn.scss
+++ b/src/components/kanbancolumn/kanbancolumn.scss
@@ -32,4 +32,8 @@ kanbancolumn {
         border-top: 0px;
         border-bottom: 0px;
     }
+
+    ion-label{
+        white-space: normal;
+    }
 }
